--- a/src/app/components/loader-recording/loader-recording.component.html
+++ b/src/app/components/loader-recording/loader-recording.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper small">
+<div class="wrapper x-small">
   <div class="blue ball"></div>
   <div class="red ball"></div>
   <div class="yellow ball"></div>
