--- a/src/app/components/loader-recording/loader-recording.component.scss
+++ b/src/app/components/loader-recording/loader-recording.component.scss
@@ -6,9 +6,35 @@
   &.small {
     height: 12px;
     .ball {
-      width: 8px;
+      min-width: 8px;
+      max-width: 8px;
       height: 8px;
       margin: 0 2px;
+
+      animation: 2s bounceSmall ease infinite;
+      @keyframes bounceSmall {
+        50% {
+          transform: translateY(4px);
+        }
+      }
+    }
+  }
+
+  &.x-small {
+    height: 8px;
+    .ball {
+      min-width: 6px;
+      max-width: 6px;
+      height: 6px;
+      margin: 0 1px;
+
+
+      animation: 2s bounceSmall ease infinite;
+      @keyframes bounceSmall {
+        50% {
+          transform: translateY(2px);
+        }
+      }
     }
   }
 }
@@ -18,14 +44,6 @@
   height: 15px;
   border-radius: 50%;
   margin: 0 10px;
-
-  animation: 2s bounceSmall ease infinite;
-
-  @keyframes bounceSmall {
-    50% {
-      transform: translateY(4px);
-    }
-  }
 }
 
 .blue {
