--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,34 @@
   background: orange;
   border-radius: 3px;
 }
+
+.table {
+  &-ww {
+    td {
+      &.vertical {
+        width: 50px;
+        height: auto;
+        vertical-align: middle;
+        left: calc(50%);
+
+        span {
+          writing-mode: vertical-lr;
+          transform: rotate(180deg);
+          position: relative;
+          left: calc(50% - 11px);
+          margin-left: auto;
+          margin-right: auto;
+        }
+      }
+    }
+  }
+}
+
+.record {
+  height: 40px;
+  width: 40px;
+
+  font-size: 25px;
+
+  border-radius: 50%;
+}
