chore: changed the table and fixed the speech recognition

--- a/src/app/components/speech-card/speech-card.component.html
+++ b/src/app/components/speech-card/speech-card.component.html
@@ -14,12 +14,12 @@
       </ng-template>
     </button>
 
-    <h6 class="card-subtitle mb-2 text-muted">{{feedback ?? '&zwnj' }}</h6>
+    <h6 class="card-subtitle mb-2 text-muted">{{feedback ?? '' }}</h6>
 
-    <h6 appHighlight
-        [searchedWords]="['begin']"
-        classToApply="highlight-success"
-        class="card-subtitle mb-2 text-muted"
-        [text]="recorded"></h6>
+<!--    <h6 appHighlight-->
+<!--        [searchedWords]="[expected]"-->
+<!--        classToApply="highlight-success"-->
+<!--        class="card-subtitle mb-2 text-muted"-->
+<!--        [text]="recorded"></h6>-->
   </div>
 </div>
