--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,6 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:500,700");
 
 @import "bootstrap/scss/bootstrap";
-//@import '~swiper/swiper-vars';
-//@import '~swiper/swiper';
-
-@import 'swiper/modules/pagination/pagination.min.css';
 
 * {
   font-family: 'Montserrat';
@@ -44,10 +40,108 @@
 }
 
 .record {
-  height: 40px;
-  width: 40px;
+  height: 80px;
+  width: 80px;
 
   font-size: 25px;
 
   border-radius: 50%;
+}
+
+.question-container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+}
+
+.recognised {
+  font-size: 25px;
+
+  .form {
+    margin-right: 1rem;
+  }
+
+  .response {
+    position: relative;
+    color: #a5a5a5;
+    padding-bottom: 3px;
+
+    .highlight-success {
+      background: #198754;
+      border-radius: 3px;
+      color: white;
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+
+    &:before {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 4px;
+      background: #D9D9D9;
+      opacity: 0.5;
+      z-index: 1;
+    }
+  }
+}
+
+.card-container {
+  width: 100%;
+  position: relative;
+
+  .animator {
+    width: 18rem;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+
+    transition: all .3s cubic-bezier(.25, .8, .25, 1);
+
+    &.animate {
+
+      &-out {
+        transform: translateX(-700px);
+        opacity: 0;
+      }
+
+      &-in {
+        transform: translateX(700px);
+        opacity: 1;
+      }
+    }
+  }
+}
+
+.btn {
+  &-round {
+    border-radius: 50%;
+  }
+
+  &-hover {
+    &-white {
+      &:hover {
+        color: white;
+      }
+    }
+  }
+}
+
+.loader {
+  position: relative;
+  width: 100%;
+  height: 10px;
+  border-radius: 10px;
+  overflow: hidden;
+
+  .buffer {
+    height: 100%;
+    transition: all 0.5s cubic-bezier(0, 1.07, 0.93, 1) 0s;
+
+      &.success {
+        background-color: #198754;
+      }
+  }
 }
