--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,64 +1,52 @@
 <app-header></app-header>
 
 <div class="container">
-
-  <!--  <ng-container *ngFor="let question of questions">-->
-
-  <!--    Speech Card -->
-
-  <!--    <ng-container *ngFor="let form of question.forms">-->
-  <!--      <app-speech-card *ngFor="let tense of form.tenses"-->
-  <!--                       [header]="form.form"-->
-  <!--                       [subHeader]="tense.tense" [expected]="tense.value">-->
-  <!--      </app-speech-card>-->
-  <!--    </ng-container>-->
-
-
   <!--  V2 -->
-  <div class="question-container d-flex flex-column align-items-center">
+  <div *ngIf="questions" class="question-container d-flex flex-column align-items-center"  >
     <div class="loader">
       <div class="buffer success" [style.width.%]="progress"></div>
-
     </div>
 
-    <div class="d-flex justify-content-between w-100">
-      <button class="btn btn-primary align-self-center" (click)="previousWord()"><i
-          class="fa-solid fa-chevron-left"></i></button>
-      <h1 class="current-word mt-3 mb-4">{{currentQuestion.werkwoord}}</h1>
-      <button class="btn btn-primary align-self-center" (click)="nextWord()"><i
-          class="fa-solid fa-chevron-right"></i></button>
-    </div>
+    <ng-container *ngIf="currentQuestion">
+      <div class="d-flex justify-content-between w-100">
+        <button class="btn btn-primary align-self-center" (click)="previousWord()"><i
+          class="fa-solid fa-chevron-left"></i> Previous word</button>
+        <h1 class="current-word mt-3 mb-4">{{currentQuestion.werkwoord}}</h1>
+        <button class="btn btn-primary align-self-center" (click)="nextWord()">Next word <i
+          class="fa-solid fa-chevron-right"></i> </button>
+      </div>
 
-    <app-speech-card [header]="currentQuestion.form" [subHeader]="currentQuestion.tense"
-      [expected]="currentQuestion.expected" (text)="fixSpeech($event)" (result)="result($event)">
-    </app-speech-card>
+      <app-speech-card [header]="currentQuestion.personalPronoun" [subHeader]="currentQuestion.tense"
+                       [expected]="currentQuestion.expected" (text)="fixSpeech($event)" (result)="result($event)">
+      </app-speech-card>
 
-    <div class="mt-3" class="d-flex align-items-center">
-      <span>Say: <i #say>{{currentQuestion.form.split('/')[0].trim()}}
-          {{currentQuestion.expected.toLocaleLowerCase()}}</i></span>
-      <button class="btn btn-outline-info btn-round btn-hover-white mx-3 my-2" (click)="speak(say.innerText)"><i
+      <div class="mt-3" class="d-flex align-items-center">
+      <span>Say: <i #say>{{currentQuestion.personalPronoun.split('/')[0].trim()}}
+        {{currentQuestion.expected.toLocaleLowerCase()}}</i></span>
+        <button class="btn btn-outline-info btn-round btn-hover-white mx-3 my-2" (click)="speak(say.innerText)"><i
           class="fa-solid fa-play"></i></button>
-    </div>
+      </div>
 
-    <div class="recognised d-flex w-100 mt-3 mb-3">
-      <span #form class="form">{{currentQuestion.form}}</span>
-      <span #recognized class="flex-grow-1 response" appHighlight
-        [searchedWords]="currentQuestion.expected.toLowerCase().split(' ')" 
-        classToApply="highlight-success"
-        [text]="recognizedSpeech"></span>
-      <button class="btn btn-outline-info btn-round btn-hover-white d-flex align-items-center justify-items-center align-self-center" 
-      style="margin-left: 10px; height: 40px!important;width: 40px!important;"
-        (click)="speak(form.innerText + ' ' + recognized.innerText)"><i class="fa-regular fa-circle-play"></i></button>
-    </div>
+      <div class="recognised d-flex w-100 mt-3 mb-3">
+        <span #form class="form">{{currentQuestion.personalPronoun}}</span>
+        <span #recognized class="flex-grow-1 response" appHighlight
+              [searchedWords]="currentQuestion.expected.toLowerCase().split(' ')"
+              classToApply="highlight-success"
+              [text]="recognizedSpeech"></span>
+        <button class="btn btn-outline-info btn-round btn-hover-white d-flex align-items-center justify-items-center align-self-center"
+                style="margin-left: 10px; height: 40px!important;width: 40px!important;"
+                (click)="speak(form.innerText + ' ' + recognized.innerText)"><i class="fa-regular fa-circle-play"></i></button>
+      </div>
 
-    <div class="d-flex justify-content-between w-100">
-      <button class="btn btn-primary align-self-end" style="width: 150px"
-        [disabled]="!canPrevious(questions, currentQuestion)" (click)="previousQuestion()">Previous
-      </button>
-      <button class="btn btn-primary align-self-end" style="width: 150px"
-        [disabled]="!canNext(questions, currentQuestion)" (click)="nextQuestion()">Next
-      </button>
-    </div>
+      <div class="d-flex justify-content-between w-100">
+        <button class="btn btn-primary align-self-end" style="width: 150px"
+                [disabled]="!canPrevious(questions, currentQuestion)" (click)="previousQuestion()">Previous tense
+        </button>
+        <button class="btn btn-primary align-self-end" style="width: 150px"
+                [disabled]="!canNext(questions, currentQuestion)" (click)="nextQuestion()">Next tense
+        </button>
+      </div>
+    </ng-container>
   </div>
 
 
