--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <div class="buffer success" [style.width.%]="progress"></div>
     </div>
 
-    <ng-container *ngIf="currentQuestion">
+    <ng-container *ngIf="currentQuestion;else test">
       <div class="d-flex justify-content-between w-100">
         <button class="btn btn-primary align-self-center" (click)="previousWord()"><i
           class="fa-solid fa-chevron-left"></i> Previous word</button>
@@ -16,8 +16,11 @@
           class="fa-solid fa-chevron-right"></i> </button>
       </div>
 
-      <app-speech-card [header]="currentQuestion.personalPronoun" [subHeader]="currentQuestion.tense"
-                       [expected]="currentQuestion.expected" (text)="fixSpeech($event)" (result)="result($event)">
+      <app-speech-card [header]="currentQuestion.personalPronoun"
+                       [subHeader]="currentQuestion.tense"
+                       [expected]="currentQuestion.expected"
+                       [wordMeta]="currentQuestion"
+                       (text)="fixSpeech($event)" (result)="result($event)">
       </app-speech-card>
 
       <div class="mt-3" class="d-flex align-items-center">
@@ -48,6 +51,8 @@
       </div>
     </ng-container>
   </div>
+
+  <ng-template #test>test</ng-template>
 
 
 </div>
